namespace PortProject.Api.Application.Qualifications.DTOs;

public class CreateQualificationDto
{
    public string Code { get; set; }
    public string Name { get; set; }
    public string Description { get; set; }
}